--- a/android-developer.html
+++ b/android-developer.html
@@ -57,7 +57,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/helbiz/251cdc85-5a67-4c77-a258-6fa2f5414006'>Helbiz Inc. - Android Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/helbiz/251cdc85-5a67-4c77-a258-6fa2f5414006'>Helbiz Inc. - Android Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -141,7 +141,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://multiplica-1.workable.com/j/66D5883AB2'>Multiplica - Jobs: Android Developer - Apply online</a></h5> 
+<h5><a href='https://multiplica-1.workable.com/j/66D5883AB2'>Multiplica - Jobs: Android Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -240,7 +240,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://workforcesource.recruiterbox.com/jobs/fk036u8/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workforcesource.recruiterbox.com/jobs/fk036u8/'>
     0708 - Stong Mid Android Developer at Workforce Source
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -286,7 +286,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999691559986-freelance-android-mobile-developer-growth-hacking'>Netatmo Freelance - Android Mobile Developer - Growth Hacking | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999691559986-freelance-android-mobile-developer-growth-hacking'>Netatmo Freelance - Android Mobile Developer - Growth Hacking | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -306,7 +306,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://Signeasy.recruiterbox.com/jobs/fk0ywb'>
+<h5><a href='http://Signeasy.recruiterbox.com/jobs/fk0ywb'>
     Android Developer at SignEasy
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -405,7 +405,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LenmarConsultingInc/743999691040325-android-developer-w2-contract-gc-and-citizens-only-'>Lenmar Consulting Inc. Android Developer (W2 Contract - GC and Citizens only) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LenmarConsultingInc/743999691040325-android-developer-w2-contract-gc-and-citizens-only-'>Lenmar Consulting Inc. Android Developer (W2 Contract - GC and Citizens only) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Ann Arbor, MI, USA</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -437,7 +437,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light">Ho Chi Minh Ho Chi Minh</span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
-<h5><a href='https://vezeeta.workable.com/j/81C90BD741'>Vezeeta - Jobs: Android Developer - Dubai - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vezeeta.workable.com/j/81C90BD741'>Vezeeta - Jobs: Android Developer - Dubai - Apply online</a></h5> 
 <p><span class="badge badge-light">Dubai Dubai</span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
@@ -461,7 +461,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light"></span></p>
 <p>2019?6?19? ... Apply online for the job of Android Developer-china/Shanghai at DataVisor.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/8279E3A01D'>Zealcon - Jobs: Android Developer - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/8279E3A01D'>Zealcon - Jobs: Android Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 21, 2019 ... Apply online for the job of Android Developer at Zealcon.</p>
 <hr/>
