--- a/security.html
+++ b/security.html
@@ -51,7 +51,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/farfetch/job/oyqEafww'>Farfetch Careers - Junior Security Analyst - Plug-In Programme 2019</a></h5> 
+<h5><a href='https://jobs.jobvite.com/farfetch/job/oyqEafww'>Farfetch Careers - Junior Security Analyst - Plug-In Programme 2019</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -79,7 +79,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/WabashValleyPower/743999689411015-cyber-security-analyst'>Wabash Valley Power Cyber Security Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/WabashValleyPower/743999689411015-cyber-security-analyst'>Wabash Valley Power Cyber Security Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -101,7 +101,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... Apply online for the job of Security Engineer at Viva Wallet.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hostway.workable.com/j/AAA89DE9D1'>Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online</a></h5> 
+<h5><a href='https://hostway.workable.com/j/AAA89DE9D1'>Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -134,7 +134,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/shulmanfleming/job/1cyaftceqe6wmxu18gobqzhnwe'>Application Security Engineer | Shulman Fleming &amp; Partners</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/shulmanfleming/job/1cyaftceqe6wmxu18gobqzhnwe'>Application Security Engineer | Shulman Fleming &amp; Partners</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -144,7 +144,7 @@
 MITRE, you can have both. That's because MITRE people are committed to 
 tackling?...</p>
 <hr/>
-<h5><a href='https://capmo.join.com/jobs/271728-qa-and-security-engineer-m-f-d'>Job @ Capmo (Munich): QA & Security Engineer (m/f/d) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://capmo.join.com/jobs/271728-qa-and-security-engineer-m-f-d'>Job @ Capmo (Munich): QA & Security Engineer (m/f/d) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -161,7 +161,7 @@ tackling?...</p>
 <p>2 days ago ... Combine CyberSecurity domain expertise and contemporary data science skills 
 to enhance cyber adversary detection, network defense, and SOC process?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oJWx9fw5&__jvst=Employee+Referral&__jvsd=s3C3Jfwb&__jvsc=Twitter&bid=nH0QTKwF'>ServiceNow Careers - Senior Security Risk Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oJWx9fw5&__jvst=Employee+Referral&__jvsd=s3C3Jfwb&__jvsc=Twitter&bid=nH0QTKwF'>ServiceNow Careers - Senior Security Risk Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -215,7 +215,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://macstadiuma1.applytojob.com/apply/9iywoLY8fN/Associate-Network-Security-Engineer'>Associate Network Security Engineer - MacStadium - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://macstadiuma1.applytojob.com/apply/9iywoLY8fN/Associate-Network-Security-Engineer'>Associate Network Security Engineer - MacStadium - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -288,7 +288,7 @@ senior Network and Security engineer to deliver network and security services to
 <p>14. Juli 2019 ... TwinCap GmbH has a job opening for Cyber Security Engineer in Z?rich (
 published: 15.07.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ooda-health/f9e44f91-09c4-4054-b7de-9e80d4054f96/apply'>OODA Health - Security Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/ooda-health/f9e44f91-09c4-4054-b7de-9e80d4054f96/apply'>OODA Health - Security Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... Security Analyst. Greater Salt Lake City Area. Information Technology ? 
 Information Technology. Full-time. Submit your application. LinkedIn profile. 
@@ -327,7 +327,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999692169917-senior-security-analyst-managed-hosting'>Merkle Inc. Senior Security Analyst, Managed Hosting | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999692169917-senior-security-analyst-managed-hosting'>Merkle Inc. Senior Security Analyst, Managed Hosting | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -362,7 +362,7 @@ new?...</p>
 <p>Jul 9, 2019 ... Raleigh, NC is now hiring a Expert Security Engineer in Raleigh, North Carolina. 
 Review all of the job details and apply today!</p>
 <hr/>
-<h5><a href='https://careers-berkley.icims.com/jobs/2109/splunk-security-automation-metrics-engineer/job'>Splunk Security Automation Metrics Engineer in Wilmington ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-berkley.icims.com/jobs/2109/splunk-security-automation-metrics-engineer/job'>Splunk Security Automation Metrics Engineer in Wilmington ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... DE, Wilmington is now hiring a Splunk Security Automation Metrics Engineer in 
 Wilmington, Delaware. Review all of the job details and apply today!</p>
@@ -371,7 +371,7 @@ Wilmington, Delaware. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/arcticwolfnetworks/jobs/4347519002'>Job Application for Concierge Security Analyst - 1 at Arctic Wolf Networks</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/arcticwolfnetworks/jobs/4347519002'>Job Application for Concierge Security Analyst - 1 at Arctic Wolf Networks</a></h5> 
 <p><span class="badge badge-light">Kitchener-Waterloo Canada Kitchener-Waterloo Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -421,7 +421,7 @@ today!</p>
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/blockfi/jobs/4333695002'>Job Application for Security Engineer at BlockFi</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/blockfi/jobs/4333695002'>Job Application for Security Engineer at BlockFi</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -451,11 +451,11 @@ Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999692047692-it-security-analyst-firewalls-vulnerability-management'>Technology Navigators IT Security Analyst - Firewalls, Vulnerability Management | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999692047692-it-security-analyst-firewalls-vulnerability-management'>Technology Navigators IT Security Analyst - Firewalls, Vulnerability Management | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, Texas Texas, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/weworkglobalit/jobs/4330893002'>Job Application for Software Security Architect at WeWork Global Technology</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/weworkglobalit/jobs/4330893002'>Job Application for Software Security Architect at WeWork Global Technology</a></h5> 
 <p><span class="badge badge-light">New York San Francisco</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
